Deluge 1.1.1 - (In Development)
 Misc:
  * Fix bdecoding some torrent files

Deluge 1.1.0 - "Time gas!" (10 January 2009)
 Core:
  * Fix issue in get_tracker_host when the torrent has no tracker
  * Fix crash while trying to convert very old 0.5 config files

 GtkUI:
  * Fix translation setting in remove torrent dialog
  * Fix notification bug on startup for already finished torrents

 Ajaxui:
  * Fix loading on iPods.
  * Fix sorting on the name column.
  * Add "Not Implemented" alerts to some functions.
  * Improve the options tab on the Add Torrent dialog

 ConsoleUI:
  * Fix auto-complete feature for torrents.

 Misc:
  * Added '-s', '--set-default-ui' option to deluge

Deluge 1.1.0_RC3 (05 January 2009)
 Core:
  * Fix applying proxy settings
  * Fix the display of the tracker host when it's an IP address and not a hostname

 GtkUI:
  * Fix folder renaming to display the change properly
  * Fix seeding torrents from moving around when sorting the '#' column

 Plugins:
  * Label: Fix move on completed
  * Add 'PeerGuardian Text (GZip)' reader to the Blocklist plugin
  * Apply Blocklist preferences when clicking on the buttons

Deluge 1.1.0_RC2 (29 December 2008)
 Core:
  * Fix new version check
  * Fix issue that prevented torrents from being added

 GtkUI:
  * Fix tooltip for 'Show session speed in titlebar' option

 Plugins:
  * Remove Stats plugin since it wasn't intended to be in this release
  * Fix never-ending import in Blocklist on Windows

 Windows:
  * Fix double-click association on Windows
  * Fix Pidgin icon interference

Deluge 1.1.0_RC1 (23 December 2008)
 Core:
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * FilterManager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)